--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@phosphor-icons/react": "2.1.5",
+        "google-maps-react": "2.0.6"
     }
 }
