--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
     },
     "dependencies": {
         "@phosphor-icons/react": "2.1.5",
-        "google-maps-react": "2.0.6"
+        "@react-google-maps/api": "2.19.3"
     }
 }
