--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "autoprefixer": "^10.4.12",
         "axios": "1.7.2",
         "laravel-vite-plugin": "^1.0",
+        "react-awesome-reveal": "^4.2.5",
+        "react-responsive-carousel": "3.2.23",
         "postcss": "^8.4.31",
         "react": "18.2.0",
         "react-dom": "18.2.0",
