--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
         "autoprefixer": "^10.4.12",
         "axios": "1.7.2",
         "laravel-vite-plugin": "^1.0",
-        "react-awesome-reveal": "^4.2.5",
-        "react-responsive-carousel": "3.2.23",
         "postcss": "^8.4.31",
         "react": "18.2.0",
+        "react-awesome-reveal": "^4.2.5",
         "react-dom": "18.2.0",
+        "react-responsive-carousel": "3.2.23",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
     },
     "dependencies": {
+        "@mui/lab": "6.0.0-dev.240424162023-9968b4889d",
+        "@mui/material": "6.0.0-dev.240424162023-9968b4889d",
         "@phosphor-icons/react": "2.1.5",
         "@react-google-maps/api": "2.19.3",
         "react-pro-sidebar": "1.1.0"
