--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mui/material": "6.0.0-dev.240424162023-9968b4889d",
         "@phosphor-icons/react": "2.1.5",
         "@react-google-maps/api": "2.19.3",
-        "react-pro-sidebar": "1.1.0"
+        "react-pro-sidebar": "1.1.0",
+        "react-quill": "2.0.0"
     }
 }
