--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "@mui/material": "6.0.0-dev.240424162023-9968b4889d",
         "@phosphor-icons/react": "2.1.5",
         "@react-google-maps/api": "2.19.3",
+        "leaflet": "^1.9.4",
+        "leaflet-control-geocoder": "^2.4.0",
+        "react-leaflet": "^4.2.1",
         "react-pro-sidebar": "1.1.0",
         "react-quill": "2.0.0"
     }
